// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded has the correct throughput 1`] = `
Array [
  Object {
    "x": 1627321620000,
    "y": 12,
  },
  Object {
    "x": 1627321680000,
    "y": 17,
  },
  Object {
    "x": 1627321740000,
    "y": 12,
  },
  Object {
    "x": 1627321800000,
    "y": 7,
  },
  Object {
    "x": 1627321860000,
    "y": 7,
  },
  Object {
    "x": 1627321920000,
    "y": 10,
  },
  Object {
    "x": 1627321980000,
    "y": 1,
  },
  Object {
    "x": 1627322040000,
    "y": 4,
  },
  Object {
    "x": 1627322100000,
    "y": 4,
  },
  Object {
    "x": 1627322160000,
    "y": 13,
  },
  Object {
    "x": 1627322220000,
    "y": 6,
  },
  Object {
    "x": 1627322280000,
    "y": 12,
  },
  Object {
    "x": 1627322340000,
    "y": 10,
  },
  Object {
    "x": 1627322400000,
    "y": 13,
  },
  Object {
    "x": 1627322460000,
    "y": 16,
  },
  Object {
    "x": 1627322520000,
    "y": 12,
  },
  Object {
    "x": 1627322580000,
    "y": 5,
  },
  Object {
    "x": 1627322640000,
    "y": 8,
  },
  Object {
    "x": 1627322700000,
    "y": 5,
  },
  Object {
    "x": 1627322760000,
    "y": 7,
  },
  Object {
    "x": 1627322820000,
    "y": 4,
  },
  Object {
    "x": 1627322880000,
    "y": 10,
  },
  Object {
    "x": 1627322940000,
    "y": 9,
  },
  Object {
    "x": 1627323000000,
    "y": 7,
  },
  Object {
    "x": 1627323060000,
    "y": 7,
  },
  Object {
    "x": 1627323120000,
    "y": 6,
  },
  Object {
    "x": 1627323180000,
    "y": 7,
  },
  Object {
    "x": 1627323240000,
    "y": 8,
  },
  Object {
    "x": 1627323300000,
    "y": 10,
  },
  Object {
    "x": 1627323360000,
    "y": 3,
  },
  Object {
    "x": 1627323420000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Throughput when data is loaded with time comparison has the correct throughput 1`] = `
Object {
  "currentPeriod": Array [
    Object {
      "x": 1627322520000,
      "y": 12,
    },
    Object {
      "x": 1627322580000,
      "y": 5,
    },
    Object {
      "x": 1627322640000,
      "y": 8,
    },
    Object {
      "x": 1627322700000,
      "y": 5,
    },
    Object {
      "x": 1627322760000,
      "y": 7,
    },
    Object {
      "x": 1627322820000,
      "y": 4,
    },
    Object {
      "x": 1627322880000,
      "y": 10,
    },
    Object {
      "x": 1627322940000,
      "y": 9,
    },
    Object {
      "x": 1627323000000,
      "y": 7,
    },
    Object {
      "x": 1627323060000,
      "y": 7,
    },
    Object {
      "x": 1627323120000,
      "y": 6,
    },
    Object {
      "x": 1627323180000,
      "y": 7,
    },
    Object {
      "x": 1627323240000,
      "y": 8,
    },
    Object {
      "x": 1627323300000,
      "y": 10,
    },
    Object {
      "x": 1627323360000,
      "y": 3,
    },
    Object {
      "x": 1627323420000,
      "y": 0,
    },
  ],
  "previousPeriod": Array [
    Object {
      "x": 1627322520000,
      "y": 12,
    },
    Object {
      "x": 1627322580000,
      "y": 17,
    },
    Object {
      "x": 1627322640000,
      "y": 12,
    },
    Object {
      "x": 1627322700000,
      "y": 7,
    },
    Object {
      "x": 1627322760000,
      "y": 7,
    },
    Object {
      "x": 1627322820000,
      "y": 10,
    },
    Object {
      "x": 1627322880000,
      "y": 1,
    },
    Object {
      "x": 1627322940000,
      "y": 4,
    },
    Object {
      "x": 1627323000000,
      "y": 4,
    },
    Object {
      "x": 1627323060000,
      "y": 13,
    },
    Object {
      "x": 1627323120000,
      "y": 6,
    },
    Object {
      "x": 1627323180000,
      "y": 12,
    },
    Object {
      "x": 1627323240000,
      "y": 10,
    },
    Object {
      "x": 1627323300000,
      "y": 13,
    },
    Object {
      "x": 1627323360000,
      "y": 16,
    },
    Object {
      "x": 1627323420000,
      "y": 0,
    },
  ],
}
`;
